[Qt] emit initialLayoutCompleted signal from FrameLoaderClientQt::dispatchDidFirstVisuallyNonEmptyLayout https://bugs.webkit.org/show_bug.cgi?id=38921

Reviewed by Kenneth Christiansen.
Patch by Antonio Gomes <tonikitoo@webkit.org>

Emit initialLayoutCompleted signal from FrameLoaderClientQt::dispatchDidFirstVisuallyNonEmptyLayout
instead of FrameLoaderClientQt::dispatchDidFirstLayout , because the former ensures that a
visual content layed out on the frame.

It matches to QWebFrame::initialLayoutCompleted signal documentation at:

"... This is the first time you will see contents displayed on the frame ..."

* WebCoreSupport/FrameLoaderClientQt.cpp:
(WebCore::FrameLoaderClientQt::dispatchDidFirstLayout):
(WebCore::FrameLoaderClientQt::dispatchDidFirstVisuallyNonEmptyLayout):

Canonical link: https://commits.webkit.org/50402@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@59163 268f45cc-cd09-0410-ab3c-d52691b4dbfc