WebKit/qt/WebCoreSupport/FrameLoaderClientQt.cpp
@@ -446,13 +446,13 @@ void FrameLoaderClientQt::dispatchDidFinishLoad()
 
 void FrameLoaderClientQt::dispatchDidFirstLayout()
 {
-    if (m_webFrame)
-        emit m_webFrame->initialLayoutCompleted();
+    notImplemented();
 }
 
 void FrameLoaderClientQt::dispatchDidFirstVisuallyNonEmptyLayout()
 {
-    notImplemented();
+    if (m_webFrame)
+        emit m_webFrame->initialLayoutCompleted();
 }
 
 void FrameLoaderClientQt::dispatchShow()
